# copick-server

./: .gitignore  README.md  example_copick.json  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
copick_server/: client.py  demo_client.py  demo_server.py  server.py
tests/: conftest.py  test_route_handlers.py  test_server.py
