[project]
name = "copick-server"
version = "0.1.0"
description = "Server for hosting Copick data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "copick",
    "numpy",
    "uvicorn",
    "zarr",
    "fsspec",
    "starlette"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["copick_server"]