[project]
name = "copick-server"
version = "0.1.0"
description = "Server for hosting Copick data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "copick",
    "numpy",
    "uvicorn",
    "zarr",
    "fsspec",
    "starlette",
    "copick-utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["copick_server"]

[tool.uv.sources]
copick-utils = { git = "https://github.com/copick/copick-utils" }
